--- a/users/index.html
+++ b/users/index.html
@@ -75,7 +75,7 @@ http://www.boost.org/development/website_updating.html
                 <p>"Item 55: Familiarize yourself with Boost."<br />
                 &mdash; <cite><a href="http://www.aristeia.com/" class=
                 "external">Scott Meyers</a>, <a href=
-                "http://www.awl.com/cseng/titles/0-321-33487-6/" class=
+                "http://my.safaribooksonline.com/0321334876" class=
                 "external">Effective C++, 3rd Ed.</a></cite></p>
               </blockquote>
 
